--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
-  </body>
+  
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"alt="">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"alt="the lion">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"alt="the lion"
+title="this is about a lion"> -->
+
 </html>
